updated create catto command to be dialog based

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.jagrosh</groupId>
             <artifactId>jda-utilities</artifactId>
             <version>3.0.4</version>
