--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <type>pom</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.1</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.github.Andre601</groupId>-->
 <!--            <artifactId>jda-utilities</artifactId>-->
